# glacier-weather

./: CMakeLists.txt  LICENSE  glacier-weather.desktop
icons/: wi-license.txt
lib/: CMakeLists.txt  dbadapter.cpp  dbadapter.h  openweatherapi.cpp  openweatherapi.h  weatherapi.cpp  weatherapi.h  weatherdata.cpp  weatherdata.h
src/: CMakeLists.txt  appmodel.cpp  appmodel.h  dbadapter.cpp  dbadapter.h  main.cpp  openweatherapi.cpp  placesmodel.cpp  placesmodel.h  settings.cpp  settings.h  settingsmodel.cpp  settingsmodel.h  weatherdata.cpp  weatherdata.h  weathermodel.cpp  weathermodel.h
src/qml/: glacier-weather.qml  glacier-weather.qrc
src/qml/components/: BigForecastIcon.qml  ForecastIcon.qml  WeatherIcon.qml  WeatherSettings.qml
src/qml/pages/: MainPage.qml  PlacesPage.qml  SettingsPage.qml
translations/: glacier-weather.ts  glacier-weather_cs.ts  glacier-weather_de.ts  glacier-weather_es.ts  glacier-weather_pl.ts  glacier-weather_ru.ts  glacier-weather_sk_SK.ts  glacier-weather_uk.ts
